--- a/assignment2_AHR9OI/client/package.json
+++ b/assignment2_AHR9OI/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.10",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^4.5.0",
+    "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
